src/scss/components/list_page/filter_selector.scss
.list-filter-selector {
  border-bottom: 1px solid #dce3e6;
  display: inline-block;
  position: relative;

  &:focus {
    border-color: #5269de;
    box-shadow: inset 0 -2px 0 #5269de;
    outline: 0;
  }
}

.list-filter-selector {
  .option-list {
    max-height: 220px;
  }

  i {
    vertical-align: middle;
  }
}

.list-filter-selector-selected {
  color: #0c0d0d;
  cursor: pointer;
  font-size: 15px;
  font-weight: 600;
  height: 28px;
  line-height: 24px;
  padding-right: 24px;
  position: relative;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.list-filter-selector-indicator {
  color: #696e6f;
  font-size: 16px;
  position: absolute;
  right: 8px;
  -ms-transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
}

.list-filter-selector-options {
  border-radius: 16px;
  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.24);
  left: -20px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  right: -20px;
  top: -8px;
  z-index: 1;
  background-color: #fff;
  min-width: 300px;
  max-width: 500px;

  > hr {
    border: 0;
    border-bottom: 1px solid #dce3e6;
    display: block;
    height: 0;
    margin: 8px 0;
    padding: 0;
  }
}

.list-filter-selector.list-filter-selector-list {
  float: left;
  max-width: 400px;
  border-bottom: 0;
  width: auto;

  &:focus {
    box-shadow: none;
  }

  .list-filter-selector-options {
    top: -35px !important;
    left: -15px !important;
  }

  .list-filter-selector-indicator {
    right: 0;
  }
}

